# rota-cultural

./: .gitignore  README.md  behave.ini  main.py  pretty.output  pyproject.toml
backend/: .env.example  manage.py  pyproject.toml
backend/rota_cultural/apps/addresses/: admin.py  apps.py  models.py
backend/rota_cultural/apps/addresses/migrations/: 0001_initial.py  0002_alter_address_options.py
backend/rota_cultural/apps/categories/: admin.py  models.py
backend/rota_cultural/apps/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
backend/rota_cultural/apps/events/: admin.py  apps.py  models.py
backend/rota_cultural/apps/events/migrations/: 0001_initial.py  0002_alter_event_options.py
backend/rota_cultural/apps/favorites/: admin.py  apps.py  models.py
backend/rota_cultural/apps/favorites/migrations/: 0001_initial.py  0002_alter_favorite_options.py
backend/rota_cultural/apps/geocoding/: apps.py
backend/rota_cultural/apps/geocoding/api/v1/: routes.py  serializers.py  services.py  viewsets.py
backend/rota_cultural/apps/itineraries/: admin.py  apps.py  models.py
backend/rota_cultural/apps/itineraries/migrations/: 0001_initial.py  0002_alter_itineraryitem_options.py
backend/rota_cultural/apps/locations/: admin.py  apps.py  models.py
backend/rota_cultural/apps/locations/api/v1/: routes.py  serializers.py  viewsets.py
backend/rota_cultural/apps/locations/migrations/: 0001_initial.py  0002_remove_location_updated_at.py  0003_location_updated_at.py  0004_alter_location_point.py  0005_alter_location_latitude_alter_location_longitude.py
backend/rota_cultural/apps/notifications/: admin.py  apps.py  models.py
backend/rota_cultural/apps/places/: admin.py  apps.py  models.py
backend/rota_cultural/apps/places/migrations/: 0001_initial.py  0002_alter_establishment_options_and_more.py
backend/rota_cultural/apps/reviews/: admin.py  apps.py  models.py
backend/rota_cultural/apps/reviews/migrations/: 0001_initial.py  0002_alter_review_options.py
backend/rota_cultural/apps/routing/: apps.py
backend/rota_cultural/apps/routing/api/v1/: routes.py  viewsets.py
backend/rota_cultural/apps/users/: apps.py
backend/rota_cultural/core/: settings.py  urls.py  views.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  (+1 more)
(+82 files in other folders)
