[project]
name = "rota-cultural"
version = "0.1.0"
description = "Plataforma cultural de Patos-PB - Backend, Frontend e BDD"
readme = "README.md"
requires-python = ">=3.13"

[tool.uv]
dev-dependencies = [
    "behave>=1.3.3",
    "behave-django>=1.6.0",
    "django>=5.2.0"
]

[tool.uv.workspace]
members = [
    "backend"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
